deployment/kubernetes/spots-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: spots-gateway
  name: spots-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spots-gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/spots-network: "true"
        io.kompose.service: spots-gateway
    spec:
      containers:
      - env:
        - name: eureka_client_serviceUrl_defaultZone
          value: http://spots-eureka:8761/eureka
        image: spotsregistry1.azurecr.io/spots-gateway:latest
        imagePullPolicy: ""
        name: spots-gateway
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
