deployment/kubernetes/spots-eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: spots-eureka
  name: spots-eureka
spec:
  ports:
  - name: "8761"
    port: 8761
    targetPort: 8761
  selector:
    io.kompose.service: spots-eureka
status:
  loadBalancer: {}
