deployment/kubernetes/spots-network-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: spots-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/spots-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/spots-network: "true"
